--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,9 @@ body {
   border: 2px solid #ffe3a7;
   border-radius: 10px;
 }
+.search-form {
+  text-align: center;
+}
 h3 {
   color: #6d6b6b;
 }
