--- a/src/style.css
+++ b/src/style.css
@@ -63,3 +63,13 @@ h3 {
 #celsius-link {
   text-decoration: none;
 }
+.weather-forecast {
+  text-align: center;
+}
+.forecast-date {
+  font-size: 20px;
+  opacity: 0.7;
+}
+.forecast-min {
+  opacity: 0.7;
+}
